--- a/index.html
+++ b/index.html
@@ -35,60 +35,72 @@
             <li><a class="nav-link" href="">Contact</a></li>
           </ul>
         </nav>
-        <button class="header-button" type="button">Order Now</button>
+        <button class="main-button" type="button">Order Now</button>
       </div>
     </header>
 
     <main>
-      <section class="hero">
-        <div class="container hero-container">
-          <div class="hero-text-wrap">
-            <h1 class="hero-title">Enjoy Your Favorite Food From Anywhere</h1>
-            <p class="hero-text">
+      <section class="start">
+        <div class="container start-container">
+          <div class="start-text-wrap">
+            <h1 class="start-title">Enjoy Your Favorite Food From Anywhere</h1>
+            <p class="start-text">
               With just a few clicks, you can have your favorite meals delivered
               straight to your doorstep, no matter where you are. Order now and
               enjoy a hassle-free and delicious meal from the comfort of your
               own home.
             </p>
-            <button class="hero-button" type="button">Order Now</button>
+            <button class="main-button" type="button">Order Now</button>
           </div>
-          <img
-            src="./images/pngwing.com - 2022-08-04T071142 (1).jpg"
-            alt="plate of salad"
-            width="528"
-          />
+          <img src="images/salad.png" alt="plate of salad" width="528" />
         </div>
       </section>
 
-      <section>
-        <img src="./images/aple.jpg" alt="green apple" />
-        <h2>What`s Special About Our Offerings</h2>
-        <p>
-          With our platform, you can browse through a diverse selection of
-          cuisines and local restaurants, and choose from a variety of dishes
-          that cater to your specific taste buds.
-        </p>
-        <ul>
-          <li>
-            <h3>Fasest Delivery</h3>
-            <p>
-              Our advanced logistics system and dedicated delivery partners
-              ensure that your meals are delivered to you within 30-minutes.
-            </p>
-          </li>
-          <li>
-            <h3>Easy To Order</h3>
-            <p>
-              You can browse through a wide variety of cuisines and restaurants,
-              select your favorite meals, and place your order in just a few
-              clicks.
-            </p>
-          </li>
-        </ul>
-        <button type="button">Order Now</button>
+      <section class="about-us">
+        <div class="container about-us-container">
+          <div class="apple-img">
+            <img src="images/apple.png" alt="green apple" />
+          </div>
+          <div class="about-us-wrap">
+            <div class="title-wrap">
+              <h2 class="title-about-us">What`s Special About Our Offerings</h2>
+              <p class="text-about-us">
+                With our platform, you can browse through a diverse selection of
+                cuisines and local restaurants, and choose from a variety of
+                dishes that cater to your specific taste buds.
+              </p>
+            </div>
+            <ul class="our-advantages">
+              <li class="our-advantage">
+                <h3 class="advantage-title">Fasest Delivery</h3>
+                <p class="advantage-text">
+                  Our advanced logistics system and dedicated delivery partners
+                  ensure that your meals are delivered to you within 30-minutes.
+                </p>
+              </li>
+              <li class="our-advantage">
+                <h3 class="advantage-title">Easy To Order</h3>
+                <p class="advantage-text">
+                  You can browse through a wide variety of cuisines and
+                  restaurants, select your favorite meals, and place your order
+                  in just a few clicks.
+                </p>
+              </li>
+            </ul>
+            <button type="button" class="main-button advantage-button">
+              Order Now
+            </button>
+          </div>
+        </div>
       </section>
 
-      <section></section>
+      <section class="dishes"></section>
+
+      <section class="reviews"></section>
+
+      <section class="order"></section>
+
+      <footer class="footer"></footer>
     </main>
   </body>
 </html>
