--- a/index.html
+++ b/index.html
@@ -203,49 +203,96 @@
           />
         </div>
       </section>
-
-      <footer class="footer">
-        <div class="container footer-container">
-          <div class="footer-nav-wrap">
-            <a class="logo" href="./index.html"
-              ><img src="./images/Vector.svg" alt="logo"
-            /></a>
-            <nav class="nav">
-              <ul class="nav-list">
-                <li><a class="nav-link" href="">Home</a></li>
-                <li><a class="nav-link" href="">About</a></li>
-                <li><a class="nav-link" href="">Service</a></li>
-                <li><a class="nav-link" href="">Menu</a></li>
-                <li><a class="nav-link" href="">Contact</a></li>
-              </ul>
-            </nav>
-          </div>
-          <div class="footer-input-wrap">
-            <p class="footer-input-label">Subscribe</p>
-            <input
-              class="footer-input"
-              type="email"
-              placeholder="Enter your email"
-              name="user-email"
-            />
-            <button class="footer-button" type="submit">Subscribe</button>
-            <p class="footer-input-text">
-              By subscribing you agree to with our
-              <a class="footer-link" href="">Privacy Policy</a>
-            </p>
-          </div>
-        </div>
-        <div class="container">
-          <div class="right-wrap">
-            <div class="right-wrap-links">
-              <a class="footer-link" href="">Privacy Policy</a>
-              <a class="footer-link" href="">Terms of Service</a>
-              <a class="footer-link" href="">Cookies Settings</a>
-            </div>
-            <p class="right-text">2022 FoodSta. All right reserved.</p>
-          </div>
-        </div>
-      </footer>
     </main>
+
+    <footer class="footer">
+      <div class="container footer-container">
+        <div class="footer-nav-wrap">
+          <a class="logo" href="./index.html"
+            ><img src="./images/Vector.svg" alt="logo"
+          /></a>
+          <nav class="nav">
+            <ul class="nav-list">
+              <li><a class="nav-link" href="">Home</a></li>
+              <li><a class="nav-link" href="">About</a></li>
+              <li><a class="nav-link" href="">Service</a></li>
+              <li><a class="nav-link" href="">Menu</a></li>
+              <li><a class="nav-link" href="">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="footer-input-wrap">
+          <p class="footer-input-label">Subscribe</p>
+          <input
+            class="footer-input"
+            type="email"
+            placeholder="Enter your email"
+            name="user-email"
+          />
+          <button class="footer-button" type="submit">Subscribe</button>
+          <p class="footer-input-text">
+            By subscribing you agree to with our
+            <a class="footer-link" href="">Privacy Policy</a>
+          </p>
+        </div>
+      </div>
+      <div class="container">
+        <div class="right-wrap">
+          <div class="right-wrap-links">
+            <a class="footer-link" href="">Privacy Policy</a>
+            <a class="footer-link" href="">Terms of Service</a>
+            <a class="footer-link" href="">Cookies Settings</a>
+          </div>
+          <p class="right-text">2022 FoodSta. All right reserved.</p>
+        </div>
+      </div>
+    </footer>
+
+    <div class="backdrop">
+      <div class="modal">
+        <button class="close-form-btn" type="submit">
+          <svg class="cross-icon" width="12" height="12">
+            <use href="/images/icons.svg#icon-cross"></use>
+          </svg>
+        </button>
+        <p class="form-title">Order Form</p>
+        <form class="modal-form">
+          <div class="input-wrap">
+            <label class="form-subtitle" for="user_name">Name</label>
+            <input
+              type="text"
+              name="user_name"
+              class="form-input"
+              placeholder="Your name"
+              id="user_name"
+              required
+            />
+          </div>
+          <div class="input-wrap">
+            <label class="form-subtitle" for="user_phone">Phone number</label>
+            <input
+              type="tel"
+              name="user_phone"
+              class="form-input"
+              placeholder="+38(0_ _) _ _ _   _ _   _ _"
+              id="user_phone"
+              required
+            />
+          </div>
+          <div class="input-wrap">
+            <label class="form-subtitle" for="user_email">E-mail</label>
+            <input
+              type="email"
+              name="user_email"
+              class="form-input"
+              placeholder="example@gmail.com"
+              id="user_email"
+              required
+            />
+          </div>
+          <button class="modal-form-btn" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
