--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
       </div>
     </footer>
 
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="close-form-btn" type="submit">
           <svg class="cross-icon" width="12" height="12">
