--- a/index.html
+++ b/index.html
@@ -52,14 +52,18 @@
             </p>
             <button class="main-button" type="button">Order Now</button>
           </div>
-          <img src="images/salad.png" alt="plate of salad" width="528" />
+          <div class="salad-border">
+            <img src="images/salad.png" alt="plate of salad" width="528" />
+          </div>
         </div>
       </section>
 
       <section class="about-us">
         <div class="container about-us-container">
-          <div class="apple-img">
-            <img src="images/apple.png" alt="green apple" />
+          <div class="apple-img-border">
+            <div class="apple-img">
+              <img class="apple" src="images/apple.png" alt="green apple" />
+            </div>
           </div>
           <div class="about-us-wrap">
             <div class="title-wrap">
@@ -110,56 +114,64 @@
           <p class="dishes-text">Looking for something delicious?</p>
           <ul class="dishes-list">
             <li class="dish">
-              <img
-                src="./images/gamburger.png"
-                alt="gamburger"
-                width="315"
-                height="315"
-              />
+              <div class="img-border">
+                <img
+                  src="./images/gamburger.png"
+                  alt="gamburger"
+                  width="315"
+                  height="315"
+                />
+              </div>
             </li>
             <li class="dish">
-              <img
-                src="./images/Pasta.png"
-                alt="pasta"
-                width="315"
-                height="315"
-              />
+              <div class="img-border">
+                <img
+                  src="./images/Pasta.png"
+                  alt="pasta"
+                  width="315"
+                  height="315"
+                />
+              </div>
             </li>
-
             <li class="dish">
-              <img
-                src="./images/pizza.png"
-                alt="pizza"
-                width="315"
-                height="315"
-              />
+              <div class="img-border">
+                <img
+                  src="./images/pizza.png"
+                  alt="pizza"
+                  width="315"
+                  height="315"
+                />
+              </div>
             </li>
-
             <li class="dish">
-              <img
-                src="./images/chicken.png"
-                alt="rice and chicken"
-                width="315"
-                height="315"
-              />
+              <div class="img-border">
+                <img
+                  src="./images/chicken.png"
+                  alt="rice and chicken"
+                  width="315"
+                  height="315"
+                />
+              </div>
             </li>
-
             <li class="dish">
-              <img
-                src="./images/salat.png"
-                alt="salad with salmon"
-                width="315"
-                height="315"
-              />
+              <div class="img-border">
+                <img
+                  src="./images/salat.png"
+                  alt="salad with salmon"
+                  width="315"
+                  height="315"
+                />
+              </div>
             </li>
-
             <li class="dish">
-              <img
-                src="./images/borshch.png"
-                alt="borshch"
-                width="315"
-                height="315"
-              />
+              <div class="img-border">
+                <img
+                  src="./images/borshch.png"
+                  alt="borshch"
+                  width="315"
+                  height="315"
+                />
+              </div>
             </li>
           </ul>
         </div>
@@ -172,6 +184,80 @@
             Don't just take our word for it - see what our satisfied customers
             have to say
           </p>
+          <div class="review-wrap-container">
+            <div class="review-wrap">
+              <div class="stars-wrap">
+                <svg class="star-icon" width="17" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="star-icon" width="17" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="star-icon" width="17" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="star-icon" width="17" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="star-icon" width="17" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+              </div>
+              <p class="review-text">
+                “The Best app I have used to order food in a while, so many
+                options to choose from too, I would recommend to a freind, No
+                questions asked”
+              </p>
+              <div class="person-wrap">
+                <img
+                  src="./images/person-1.png"
+                  width="48"
+                  height="49"
+                  alt="Men in a grey costume"
+                />
+                <div class="person">
+                  <h3 class="reviewers-name">Sumith Shah</h3>
+                  <p class="reviewers-text">Some Dude</p>
+                </div>
+              </div>
+            </div>
+            <div class="review-wrap">
+              <div class="stars-wrap">
+                <svg class="star-icon" width="17" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="star-icon" width="17" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="star-icon" width="17" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="star-icon" width="17" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="star-icon" width="17" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+              </div>
+              <p class="review-text">
+                “The ease with which I can just go in and order what i want was
+                amazing, It has been a very pleasant experience ordering from
+                this app”
+              </p>
+              <div class="person-wrap">
+                <img
+                  src="/images/person-2.png"
+                  width="48"
+                  height="49"
+                  alt="Women in a yellow shirt"
+                />
+                <div class="person">
+                  <h3 class="reviewers-name">Sumith Shah</h3>
+                  <p class="reviewers-text">Some Dude</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -198,8 +284,8 @@
             class="order-img"
             src="./images/banan.png"
             alt="banan"
-            width="608px"
-            height="266px"
+            width="608"
+            height="266"
           />
         </div>
       </section>
@@ -248,7 +334,7 @@
       </div>
     </footer>
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="close-form-btn" type="submit">
           <svg class="cross-icon" width="12" height="12">
