--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </header>
 
     <main>
-      <section class="start hidden">
+      <section class="start">
         <div class="container start-container">
           <div class="start-text-wrap">
             <h1 class="start-title">Enjoy Your Favorite Food From Anywhere</h1>
@@ -76,10 +76,15 @@
               enjoy a hassle-free and delicious meal from the comfort of your
               own home.
             </p>
-            <button class="main-button" type="button">Order Now</button>
+            <button class="main-button-start" type="button">Order Now</button>
           </div>
           <div class="salad-border">
-            <img src="images/salad.png" alt="plate of salad" width="528" />
+            <img
+              class="start-salad"
+              src="images/main-dish-dsk.png"
+              alt="plate of salad"
+              width=""
+            />
           </div>
         </div>
       </section>
