--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
             </div>
             <ul class="our-advantages">
               <li class="our-advantage">
-                <div class="link-wrap">
+                <div class="icon-wrap">
                   <svg class="icon" width="32" height="32">
-                    <use href="/images/icons.svg#icon-rocket_launch"></use>
+                    <use href="./images/icons.svg#icon-rocket_launch"></use>
                   </svg>
                 </div>
                 <h3 class="advantage-title">Fasest Delivery</h3>
@@ -162,9 +162,9 @@
                 </p>
               </li>
               <li class="our-advantage">
-                <div class="link-wrap">
+                <div class="icon-wrap">
                   <svg class="icon" width="32" height="32">
-                    <use href="/images/icons.svg#icon-touch_app"></use>
+                    <use href="./images/icons.svg#icon-touch_app"></use>
                   </svg>
                 </div>
                 <h3 class="advantage-title">Easy To Order</h3>
@@ -274,7 +274,7 @@
               </div>
             </li>
             <li class="dish">
-              <div class="img-border-hidden">
+              <div class="img-border img-border-hidden">
                 <picture>
                   <source
                     srcset="
@@ -300,7 +300,7 @@
               </div>
             </li>
             <li class="dish">
-              <div class="img-border-hidden">
+              <div class="img-border img-border-hidden">
                 <picture>
                   <source
                     srcset="
@@ -326,7 +326,7 @@
               </div>
             </li>
             <li class="dish">
-              <div class="img-border-hidden">
+              <div class="img-border img-border-hidden">
                 <picture>
                   <source
                     srcset="
@@ -355,7 +355,7 @@
         </div>
       </section>
 
-      <section class="reviews hidden">
+      <section class="reviews">
         <div class="container reviews-container">
           <h2 class="reviews-title">What our Customers Say</h2>
           <p class="reviews-text">
