--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </button>
       </div>
 
-      <div class="mobile-menu">
+      <div class="mobile-menu is-open">
         <div class="container mobile-menu-container">
           <button type="button" class="mobile-menu-close">
             <svg class="cross-icon" width="8" height="8">
